src/test/rustdoc-ui/intra-doc/unused-extern-crate.stderr
error: unresolved link to `zip`
  --> $DIR/unused-extern-crate.rs:3:10
   |
LL | /// See [zip] crate.
   |          ^^^ no item named `zip` in scope
   |
note: the lint level is defined here
  --> $DIR/unused-extern-crate.rs:2:9
   |
LL | #![deny(broken_intra_doc_links)]
   |         ^^^^^^^^^^^^^^^^^^^^^^
   = help: to escape `[` and `]` characters, add '\' before them like `\[` or `\]`

error: aborting due to previous error

